--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -30,7 +30,7 @@
     "@blockquote/cem-to-markdown-readme": "^1.0.0",
     "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@blockquote/rollup-plugin-total-bundlesize": "^2.2.0",
-    "@blockquote/sass-style-template": "^4.1.0",
+    "@blockquote/sass-style-template": "^5.0.0",
     "@custom-elements-manifest/analyzer": "^0.10.4",
     "@open-wc/semantic-dom-diff": "^0.20.1",
     "@open-wc/testing": "^4.0.0",
@@ -40,13 +40,13 @@
     "rollup-plugin-node-externals": "^8.0.0",
     "tinyglobby": "^0.2.10",
     "concurrently": "^9.1.2",
-    "sort-package-json": "^2.12.0",
-    "@vitest/browser": "^3.0.0-beta.3",
-    "@vitest/coverage-istanbul": "^3.0.0-beta.3",
-    "@vitest/coverage-v8": "^3.0.0-beta.3",
-    "@vitest/ui": "^3.0.0-beta.3",
-    "vitest": "^3.0.0-beta.3",
-    "vite": "^6.0.6"
+    "sort-package-json": "^2.14.0",
+    "@vitest/browser": "^3.0.2",
+    "@vitest/coverage-istanbul": "^3.0.2",
+    "@vitest/coverage-v8": "^3.0.2",
+    "@vitest/ui": "^3.0.2",
+    "vitest": "^3.0.2",
+    "vite": "^6.0.7"
   },
   "publishConfig": {
     "access": "public"
