--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -35,18 +35,20 @@
     "@open-wc/semantic-dom-diff": "^0.20.1",
     "@open-wc/testing": "^4.0.0",
     "playwright": "^1.50.1",
+    "postcss-html": "1.8.0",
+    "postcss-lit": "^1.2.0",
     "@types/mocha": "^10.0.10",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-node-externals": "^8.0.0",
-    "tinyglobby": "^0.2.10",
+    "tinyglobby": "^0.2.12",
     "concurrently": "^9.1.2",
     "sort-package-json": "^2.14.0",
-    "@vitest/browser": "^3.0.5",
-    "@vitest/coverage-istanbul": "^3.0.5",
-    "@vitest/coverage-v8": "^3.0.5",
-    "@vitest/ui": "^3.0.5",
-    "vitest": "^3.0.5",
-    "vite": "^6.1.0"
+    "@vitest/browser": "^3.0.6",
+    "@vitest/coverage-istanbul": "^3.0.6",
+    "@vitest/coverage-v8": "^3.0.6",
+    "@vitest/ui": "^3.0.6",
+    "vitest": "^3.0.6",
+    "vite": "^6.1.1"
   },
   "publishConfig": {
     "access": "public"
