fix: update stylelint rules

--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -7,9 +7,7 @@
   },
   "lint-staged": {
     "**/*.{js,ts,html}": [
-      "npm run format:prettier",
-      "npm run format:eslint",
-      "npm run format:stylelint"
+      "npm run format"
     ],
     "**/*.json": [
       "npm run format:prettier"
@@ -46,7 +44,13 @@
       "custom-property-pattern": null,
       "no-duplicate-selectors": null,
       "color-function-notation": null,
-      "alpha-value-notation": null
+      "alpha-value-notation": null,
+      "media-feature-name-no-unknown": null,
+      "comment-empty-line-before": null,
+      "declaration-empty-line-before": null,
+      "property-no-vendor-prefix": null,
+      "selector-attribute-quotes": null,
+      "value-no-vendor-prefix": null
     },
     "overrides": [
       {
@@ -67,7 +71,7 @@
     "@html-eslint/eslint-plugin": "^0.35.0",
     "@html-eslint/parser": "^0.35.0",
     "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-lit": "^1.15.0",
