--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote/create-wc",
-  "version": "2.2.11",
+  "version": "2.2.12",
   "description": "Web component with Lit scaffolding - Extending Open Web Component",
   "keywords": [
     "Lit",
@@ -26,10 +26,7 @@
     "/src/"
   ],
   "scripts": {
-    "format": "eslint --ext .ts,.js,.mjs,.cjs --fix && prettier \"**/*.{ts,js,mjs,cjs,md}\" --check --ignore-path .eslintignore --write",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint --ext .js,.mjs,.cjs .",
-    "lint:prettier": "prettier \"**/*.{js,mjs,cjs,md.json}\" --check --ignore-path .eslintignore",
+    "format": "eslint . --fix && prettier \"**/*.{js,mjs,cjs,md.json}\" --write --ignore-path .prettierignore",
     "start": "node ./src/create.js"
   },
   "prettier": {
@@ -56,9 +53,11 @@
     "semver": "^7.7.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.8",
+    "eslint-plugin-html": "^8.1.2",
     "@open-wc/eslint-config": "^12.0.3",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.0.2",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.5.3"
   },
   "engines": {
