--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -28,27 +28,27 @@
   },
   "devDependencies": {
     "@blockquote/cem-to-markdown-readme": "^1.0.0",
-    "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@blockquote/rollup-plugin-total-bundlesize": "^2.2.0",
     "@blockquote/sass-style-template": "^5.0.2",
-    "@custom-elements-manifest/analyzer": "^0.10.4",
+    "@custom-elements-manifest/analyzer": "^0.10.5",
     "@open-wc/semantic-dom-diff": "^0.20.1",
-    "@open-wc/testing": "^4.0.0",
-    "playwright": "^1.54.0",
-    "postcss-html": "1.8.0",
+    "@open-wc/testing-helpers": "^3.0.1",
+    "playwright": "^1.55.0",
+    "postcss-html": "^1.8.0",
     "postcss-lit": "^1.2.0",
     "@types/mocha": "^10.0.10",
     "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-node-externals": "^8.0.1",
+    "rollup-plugin-node-externals": "^8.1.0",
     "tinyglobby": "^0.2.14",
-    "concurrently": "^9.2.0",
+    "chai-a11y-axe": "^1.5.0",
+    "concurrently": "^9.2.1",
     "sort-package-json": "^3.4.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "vitest": "^3.2.4",
-    "vite": "^7.0.4"
+    "vite": "^7.1.3"
   },
   "publishConfig": {
     "access": "public"
