--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote/create-wc",
-  "version": "1.111.0",
+  "version": "1.112.0",
   "description": "Web component with Lit scaffolding - Extending Open Web Component",
   "keywords": [
     "Lit",
@@ -26,10 +26,7 @@
     "/src/"
   ],
   "scripts": {
-    "format": "eslint --ext .ts,.js,.mjs,.cjs --fix && prettier \"**/*.{ts,js,mjs,cjs,md}\" --check --ignore-path .eslintignore --write",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint --ext .js,.mjs,.cjs .",
-    "lint:prettier": "prettier \"**/*.{js,mjs,cjs,md.json}\" --check --ignore-path .eslintignore",
+    "format": "eslint . --fix && prettier \"**/*.{js,mjs,cjs,md.json}\" --write --ignore-path .prettierignore",
     "start": "node ./src/create.js"
   },
   "prettier": {
@@ -50,16 +47,19 @@
   },
   "dependencies": {
     "@open-wc/create": "^0.38.151",
-    "chalk": "^5.4.1",
+    "chalk": "^5.6.2",
     "command-line-args": "^6.0.1",
     "prompts": "^2.4.2",
-    "semver": "^7.6.3"
+    "semver": "^7.7.3"
   },
   "devDependencies": {
-    "@open-wc/eslint-config": "^12.0.3",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.0.1",
-    "prettier": "^3.4.2"
+    "@eslint/js": "^9.38.0",
+    "eslint-plugin-html": "^8.1.3",
+    "@open-wc/eslint-config": "^13.0.0",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2",
+    "globals": "^16.4.0"
   },
   "engines": {
     "node": ">=14.15.0"
