--- a/src/common-linting/templates/package.json
+++ b/src/common-linting/templates/package.json
@@ -68,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@html-eslint/eslint-plugin": "^0.47.0",
     "@html-eslint/parser": "^0.47.0",
     "eslint": "^9.38.0",
