--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote/create-wc",
-  "version": "2.6.0",
+  "version": "2.6.1",
   "description": "Web component with Lit scaffolding - Extending Open Web Component",
   "keywords": [
     "Lit",
@@ -53,15 +53,15 @@
     "semver": "^7.7.3"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.4.0",
-    "eslint-plugin-html": "^8.1.3",
+    "@eslint/js": "^9.38.0",
     "@open-wc/eslint-config": "^13.0.0",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "globals": "^16.4.0"
   },
   "engines": {
-    "node": ">=14.15.0"
+    "node": ">=18.20.3"
   },
   "publishConfig": {
     "access": "public"
