--- a/src/common-repo/templates/package.json
+++ b/src/common-repo/templates/package.json
@@ -20,8 +20,8 @@
     "sort:package": "npx sort-package-json",
     "postinstall": "npm run sort:package",
     "prepare": "husky",
-    "test": "vitest --run --browser.headless",
-    "test:watch": "vitest"
+    "test": "vitest",
+    "test:watch": "vitest --browser.headless=false"
   },
   "dependencies": {
     "lit": "^3.3.1"
@@ -30,7 +30,7 @@
     "@blockquote/cem-to-markdown-readme": "^1.0.0",
     "@blockquote/rollup-plugin-total-bundlesize": "^2.2.0",
     "@blockquote/sass-style-template": "^5.0.2",
-    "@custom-elements-manifest/analyzer": "^0.10.10",
+    "@custom-elements-manifest/analyzer": "^0.11.0",
     "@open-wc/semantic-dom-diff": "^0.20.1",
     "@open-wc/testing-helpers": "^3.0.1",
     "playwright": "^1.56.1",
@@ -38,17 +38,17 @@
     "postcss-lit": "^1.3.1",
     "@types/mocha": "^10.0.10",
     "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-node-externals": "^8.1.1",
+    "rollup-plugin-node-externals": "^8.1.2",
     "tinyglobby": "^0.2.15",
     "chai-a11y-axe": "^1.5.0",
     "concurrently": "^9.2.1",
     "sort-package-json": "^3.4.0",
-    "@vitest/browser-playwright": "^4.0.3",
-    "@vitest/coverage-istanbul": "^4.0.3",
-    "@vitest/coverage-v8": "^4.0.3",
-    "@vitest/ui": "^4.0.3",
-    "vitest": "^4.0.3",
-    "vite": "^7.1.12"
+    "@vitest/browser-playwright": "^4.0.9",
+    "@vitest/coverage-istanbul": "^4.0.9",
+    "@vitest/coverage-v8": "^4.0.9",
+    "@vitest/ui": "^4.0.9",
+    "vitest": "^4.0.9",
+    "vite": "^7.2.2"
   },
   "publishConfig": {
     "access": "public"
